--- a/src/Fluxera.Linq.Expressions/Fluxera.Linq.Expressions.csproj
+++ b/src/Fluxera.Linq.Expressions/Fluxera.Linq.Expressions.csproj
@@ -5,13 +5,10 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;linq;expressions</PackageTags>
+		<Title>Fluxera.Linq.Expressions</Title>
 		<Description>A collection of LINQ expression utilities and extension methods.</Description>
+		<PackageTags>fluxera;library;linq;expressions</PackageTags>
 	</PropertyGroup>
-
-	<ItemGroup>
-	  <Compile Include="..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\README.md" Link="Properties\README.md">
@@ -25,6 +22,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Fluxera.Guards" Version="6.0.7" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
 	</ItemGroup>
 
